<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProductsFragment">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/listPaddingTop"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:scrollbars="vertical"
            android:visibility="invisible"
            tools:listitem="@layout/product_list_item"
            tools:visibility="visible" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/actionBarSize"
            android:theme="@style/toolbar">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:padding="@dimen/actionBarPadding">

                <ImageView
                    android:id="@+id/drawer_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/desc_menu"
                    android:focusable="true"
                    android:src="@drawable/ic_filter_variant" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_products"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:visibility="invisible" />
    </FrameLayout>

    <include
        android:id="@+id/categories_layout"
        layout="@layout/categories_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end" />

</androidx.drawerlayout.widget.DrawerLayout>