<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/category_item_background"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Todas as Categorias" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/checkbox"
        android:layout_width="@dimen/checkCategorySize"
        android:layout_height="@dimen/checkCategorySize"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:baselineAlignBottom="true"
        android:src="@drawable/ic_checkbox_marked_circle"
        android:tint="@color/colorSelectedCategory"
        android:visibility="invisible" />
</LinearLayout>
