...
            android:contentDescription="@string/desc_product_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/title"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/favorite"
            android:layout_width="@dimen/favoriteButtonSize"
            android:layout_height="@dimen/favoriteButtonSize"
            android:button="@drawable/favorite_checkbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:checked="true" />
...
